--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -47,7 +47,7 @@
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
           <li class="notification-item">
-            <a routerLinkActive='active' routerLink="/home/ACH-request">
+            <a routerLinkActive='active' routerLink="/home/ipo">
               <span>IPO</span>
             </a>
           </li>
