--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -158,7 +158,7 @@
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
           <li class="notification-item">
-            <a routerLinkActive='active'>
+            <a routerLinkActive='active' routerLink="/home/contract-note">
               <span>CN</span>
             </a>
           </li>
