--- a/src/app/pages/Net-Position/net-position-derivative/net-position-derivative.component.html
+++ b/src/app/pages/Net-Position/net-position-derivative/net-position-derivative.component.html
@@ -99,9 +99,10 @@
                         <th scope="col">IPF Charge</th>
                         <th scope="col">GST</th>
                     </tr>
+                    
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr *ngFor="let row of NetPositionGroupList" class="whitebg">
                         <th scope="col">245</th>
                         <th scope="col">Test</th>
                         <th scope="col">04/12/2023</th>
@@ -122,6 +123,28 @@
                         <th scope="col">2%</th>
                         <th scope="col">10%</th>
                         <th scope="col">0.5%</th>
+                    </tr>
+                    <tr>
+                        <th scope="col">Client Code</th>
+                        <th scope="col">Client Name</th>
+                        <th scope="col">Trade Date</th>
+                        <th scope="col">Settlement No.</th>
+                        <th scope="col">Settlement Type</th>
+                        <th scope="col">Bill No</th>
+                        <th scope="col">Bill Date</th>
+                        <th scope="col">Bill Amount</th>
+                        <th scope="col">Gross Value</th>
+                        <th scope="col">Total Expenses</th>
+                        <th scope="col">Brokerage</th>
+                        <th scope="col">Clearing Charges/Auct.</th>
+                        <th scope="col">Exchange Charges</th>
+                        <th scope="col">SEBI Charges</th>
+                        <th scope="col">Transaction Charges</th>
+                        <th scope="col">STT Charges</th>
+                        <th scope="col">Stamp Duty</th>
+                        <th scope="col">Demat Charges</th>
+                        <th scope="col">IPF Charge</th>
+                        <th scope="col">GST</th>
                     </tr>
                 </tbody>
             </table>
