--- a/src/app/pages/Reports/derivative-p-and-l-report/derivative-p-and-l-report.component.html
+++ b/src/app/pages/Reports/derivative-p-and-l-report/derivative-p-and-l-report.component.html
@@ -31,16 +31,16 @@
             <div class="col-md-3">
                 <div class="form-check">
                     <div class="mt-2">
-                        <label class="form-check-label" for="gridCheck">
+                        <label class="form-check-label" for="IncludeExpence">
                             Include Expenses
                         </label>
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <input class="form-check-input" type="checkbox" id="IncludeExpence">
                     </div>
                     <div class="mt-2">
-                        <label class="form-check-label" for="gridCheck">
+                        <label class="form-check-label" for="BFWithCloseRateFlag">
                             BF with Close Rate
                         </label>
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <input class="form-check-input" type="checkbox" id="BFWithCloseRateFlag">
                     </div>
                 </div>
             </div>
